[gd_scene load_steps=3 format=3 uid="uid://d4lmicp0jby0w"]

[ext_resource type="Script" uid="uid://3aejocv4bpcc" path="res://scripts/components/IngredientCard.gd" id="1_mfwbr"]
[ext_resource type="Texture2D" uid="uid://ciuj5r0vbotia" path="res://assets/images/ingredients/default.png" id="2_5cdqt"]

[node name="IngredientCard" type="Control"]
custom_minimum_size = Vector2(64, 100)
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 100.0
mouse_default_cursor_shape = 6
script = ExtResource("1_mfwbr")

[node name="CardContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Background" type="ColorRect" parent="CardContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.15, 0.15, 0.15, 0.8)

[node name="Sprite" type="TextureRect" parent="CardContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = 5.0
offset_right = 30.0
offset_bottom = 65.0
grow_horizontal = 2
mouse_filter = 2
texture = ExtResource("2_5cdqt")
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="CardContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = 15.0
offset_right = 30.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 10
text = "Ингредиент"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="CountLabel" type="Label" parent="CardContainer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -20.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QualityStars" type="Control" parent="CardContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -20.0
offset_right = 25.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="Star1" type="TextureRect" parent="CardContainer/QualityStars"]
layout_mode = 0
offset_left = 5.0
offset_right = 15.0
offset_bottom = 15.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="Star2" type="TextureRect" parent="CardContainer/QualityStars"]
layout_mode = 0
offset_left = 20.0
offset_right = 30.0
offset_bottom = 15.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="Star3" type="TextureRect" parent="CardContainer/QualityStars"]
layout_mode = 0
offset_left = 35.0
offset_right = 45.0
offset_bottom = 15.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 5
